# ta-signal-scanner

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/dal/: database.py
docs/: architecture-design.md  architecture-diagram.mmd  development-plan.md  repository-structure.md
docs/decisions/: 0001-repository-layout.md  0002-app-vs-src-layout.md  0003-dependency-management-approach.md  0004-dependency-pinning-strategy.md  0005-dev-tooling-selection.md  0006-mypy-lenient-configuration.md  0007-defer-alembic-precommit.md  0008-internal-app-layout.md  README.md
