[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]


[project]
name = "ta-signal-scanner"
version = "0.1.0"
description = "Personal-use technical analysis signal scanner for retail portfolio posture decisions."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Jack Power", email = "jpnittanyhoosier@users.noreply.github.com" }
]

dependencies = [
    "fastapi>=0.110,<0.120",
    "uvicorn[standard]>=0.27,<0.35",
    "jinja2>=3.1,<4.0",
    "sqlalchemy>=2.0,<3.0",
    "pydantic>=2.6,<3.0",
    "python-multipart>=0.0.9,<0.1",
    "yfinance>=0.2.40,<0.3",
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "apscheduler>=3.10,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<0.26",
    "httpx>=0.27,<0.30",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
]

[project.urls]
Repository = "https://github.com/jpnittanyhoosier/ta-signal-scanner"


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"


[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear (likely bugs)
    "UP",     # pyupgrade (modernization suggestions)
    "SIM",    # flake8-simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"


[tool.mypy]
python_version = "3.12"
files = ["app"]

# Lenient starter config — tighten over time as the codebase matures.
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

# Intentionally NOT enabled yet (these are the "strict" flags):
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# strict_optional = true
# no_implicit_optional = true
